--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -190,6 +190,7 @@ a{
 .home{
     height: calc(100vh - 3rem);
     row-gap: 1rem; /* NEW */
+	height:100%;
 }
 .home__data{
     align-self: center;
@@ -218,8 +219,7 @@ a{
     position: absolute;
     right: 0;bottom: 0;
     width: 325px;
-	margin-right:-30px;
-	margin-bottom:-15px;
+	margin-bottom:-25px;
 }
 /*==== BUTTONS ====*/
 .button{
