Testing: home_img top and width to 295

--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -217,8 +217,8 @@ a{
 .home__img{
     position: absolute;
     right: 0;bottom: 0;
-    width: 325px;
-	margin-bottom:-25px;
+    width: 295px;
+	top:300px;
 }
 /*==== BUTTONS ====*/
 .button{
