change skills__data width:50%

--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -505,7 +505,7 @@ a{
         display: flex;
         justify-content: space-between;
     }
-	.skills__text{
+	.skills__data{
 		width:50%;
 	}
 }
