--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -479,7 +479,7 @@ a{
         justify-content: space-between;
     }
 	.skills__img{
-		width:500px;
+		max-width:500px;
 	}
 }
 /* @media screen and (max-width:768px) and (max-width:1024px){
@@ -509,7 +509,7 @@ a{
         justify-content: space-between;
     }
 	.skills__img{
-		width:500px;
+		max-width:500px;
 	}
 }
 
