--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -478,7 +478,7 @@ a{
         display: flex;
         justify-content: space-between;
     }
-	.skills__data::parent{
+	.skills__data_parent{
 		width:650px;
 	}
 	img.skills__img{
@@ -511,7 +511,7 @@ a{
         display: flex;
         justify-content: space-between;
     }
-	.skills__data::parent{
+	.skills__data_parent{
 		width:650px;
 	}
 	img.skills__img{
